--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,5 +3,19 @@ cmake_minimum_required(VERSION 2.6)
 # project settings
 project(parConnect-test)
 
-add_executable(check_graph500_gen check_graph500_gen.cpp)
-target_link_libraries(check_graph500_gen ${EXTRA_LIBS})
+#################
+## PERFORMANCE ##
+#################
+
+add_executable(time_graph500_gen time_graph500_gen.cpp)
+target_link_libraries(time_graph500_gen ${EXTRA_LIBS})
+
+add_executable(time_ccl_coloring_undirected  time_ccl_coloring_undirected.cpp)
+target_link_libraries(time_ccl_coloring_undirected ${EXTRA_LIBS})
+
+#################
+## CORRECTNESS ##
+#################
+
+add_executable(test-coloring test_ccl_coloring.cpp)
+target_link_libraries(test-coloring mxx-gtest-main)
