Adding test to time coloring without pointer-doubling

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,9 @@ target_link_libraries(time_graph500_gen ${EXTRA_LIBS})
 add_executable(time_ccl_coloring_undirected_graph500  time_ccl_coloring_undirected_graph500.cpp)
 target_link_libraries(time_ccl_coloring_undirected_graph500 ${EXTRA_LIBS})
 
+add_executable(time_ccl_coloring_undirected_graph500_wo_doubling  time_ccl_coloring_undirected_graph500_wo_doubling.cpp)
+target_link_libraries(time_ccl_coloring_undirected_graph500_wo_doubling ${EXTRA_LIBS})
+
 add_executable(time_ccl_coloring_undirected_chains time_ccl_coloring_undirected_chains.cpp)
 target_link_libraries(time_ccl_coloring_undirected_chains ${EXTRA_LIBS})
 
