--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ext/mxx"]
 	path = ext/mxx
 	url = git@github.com:cjain7/mxx.git
+[submodule "ext/bliss"]
+	path = ext/bliss
+	url = git@bitbucket.org:AluruLab/bliss.git
