Added benchmark executable

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,14 +10,17 @@ add_definitions( -DPROJECT_TEST_DATA_DIR=${PROJECT_SOURCE_DIR}/data)
 ## PERFORMANCE ##
 #################
 
-add_executable(time_bfs_coloring_graph500 time_bfs_coloring_graph500.cpp)
-target_link_libraries(time_bfs_coloring_graph500  ${EXTRA_LIBS} MPITypelib CommGridlib)
+#add_executable(time_bfs_coloring_graph500 time_bfs_coloring_graph500.cpp)
+#target_link_libraries(time_bfs_coloring_graph500  ${EXTRA_LIBS} MPITypelib CommGridlib)
 
-add_executable(time_bfs_coloring_debruijn_graph time_bfs_coloring_debruijn_graph.cpp)
-target_link_libraries(time_bfs_coloring_debruijn_graph ${EXTRA_LIBS} MPITypelib CommGridlib)
+#add_executable(time_bfs_coloring_debruijn_graph time_bfs_coloring_debruijn_graph.cpp)
+#target_link_libraries(time_bfs_coloring_debruijn_graph ${EXTRA_LIBS} MPITypelib CommGridlib)
 
-add_executable(time_bfs_coloring_fileInput time_bfs_coloring_fileInput.cpp)
-target_link_libraries(time_bfs_coloring_fileInput ${EXTRA_LIBS} MPITypelib CommGridlib)
+#add_executable(time_bfs_coloring_fileInput time_bfs_coloring_fileInput.cpp)
+#target_link_libraries(time_bfs_coloring_fileInput ${EXTRA_LIBS} MPITypelib CommGridlib)
+
+add_executable(benchmark_parconnect benchmark_parconnect.cpp)
+target_link_libraries(benchmark_parconnect ${EXTRA_LIBS} MPITypelib CommGridlib)
 
 #################
 ## CORRECTNESS ##
