Added chain graph gen

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,11 +20,15 @@ target_link_libraries(time_all2all ${EXTRA_LIBS})
 ## CORRECTNESS ##
 #################
 
-add_executable(test-coloring test_ccl_coloring.cpp)
-target_link_libraries(test-coloring mxx-gtest-main)
+OPTION(BUILD_CONN_TESTS "Build the test code for checking parallel connectivity" OFF)
 
-add_executable(test-graphgen test_graphgen.cpp)
-target_link_libraries(test-graphgen mxx-gtest-main)
+if(BUILD_CONN_TESTS)
+  add_executable(test-coloring test_ccl_coloring.cpp)
+  target_link_libraries(test-coloring mxx-gtest-main)
 
-add_executable(test-bfsRunner test_bfsRunner.cpp)
-target_link_libraries(test-bfsRunner mxx-gtest-main MPITypelib CommGridlib)
+  add_executable(test-graphgen test_graphgen.cpp)
+  target_link_libraries(test-graphgen mxx-gtest-main)
+
+  add_executable(test-bfsRunner test_bfsRunner.cpp)
+  target_link_libraries(test-bfsRunner mxx-gtest-main MPITypelib CommGridlib)
+endif(BUILD_CONN_TESTS)
