Benchmarking option added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,14 @@ project(parConnect)
 #SET(CMAKE_C_COMPILER /opt/cray/craype/2.5.1/bin/cc)
 #SET(BUILD_SHARED_LIBS "OFF")
 
+####Configurale option for turning on Benchmarking
+
+OPTION(BENCHMARK_ENABLE_CONN "Turn on/off the benchmarking" ON)
+if(BENCHMARK_ENABLE_CONN)
+  add_definitions(-DBENCHMARK_CONN)
+endif(BENCHMARK_ENABLE_CONN)
+
+
 
 ##### General Compilation Settings
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11  -Drestrict=__restrict__  -ffast-math -DGRAPH_GENERATOR_MPI -DGRAPHGEN_DISTRIBUTED_MEMORY")
