--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ext/bliss"]
 	path = ext/bliss
 	url = https://github.com/ParBLiSS/kmerind.git
+[submodule "ext/plfit"]
+	path = ext/plfit
+	url = https://github.com/cjain7/plfit.git
